--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Canada, Eastern -- Juvenile fiction'
 - !lcsh 'Champlain, Lake -- Juvenile fiction'
+- GITenberg
 title: Comrades on River and Lake
 url: http://www.gutenberg.org/ebooks/40585
